--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@ashalfarhan/use-scroll",
+  "name": "@ashalfarhan/hooks",
   "version": "0.1.0",
   "license": "MIT",
   "main": "dist/index.js",
   "author": "ashalfarhan",
-  "module": "dist/use-scroll.esm.js",
+  "module": "dist/hooks.esm.js",
   "typings": "dist/index.d.ts",
   "repository": {
     "type": "git",
@@ -52,11 +52,11 @@
   },
   "size-limit": [
     {
-      "path": "dist/use-scroll.cjs.production.min.js",
+      "path": "dist/hooks.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/use-scroll.esm.js",
+      "path": "dist/hooks.esm.js",
       "limit": "10 KB"
     }
   ],
