--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,11 @@
-name: Publish to Git and NPM
+name: Publish to registry
 on:
   release:
     types: [created]
 
 jobs:
   publish:
+    name: Publish to NPM and GPR
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -18,12 +19,14 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run test:unit
-      - run: npm publish --access public
+      - name: Publish to NPM
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       - uses: actions/setup-node@v2
         with:
           registry-url: 'https://npm.pkg.github.com/'
-      - run: npm publish
+      - name: Publish to GPR
+        run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
