--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,11 +14,12 @@ jobs:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
+          cache: 'npm'
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm run build
-      - run: npm run test:unit
+      - run: npm run test
       - name: Publish to NPM
         run: npm publish --access public
         env:
