--- a/example/package.json
+++ b/example/package.json
@@ -1,14 +1,11 @@
 {
   "name": "example",
   "version": "1.0.0",
-  "main": "index.html",
+  "src": "index.tsx",
   "license": "MIT",
   "scripts": {
-    "start": "parcel serve index.html",
+    "start": "parcel serve index.html -p 3003",
     "build": "parcel build index.html"
-  },
-  "dependencies": {
-    "react-app-polyfill": "^2.0.0"
   },
   "alias": {
     "react": "../node_modules/react",
@@ -16,9 +13,9 @@
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "parcel": "^2.0.0-beta.2",
-    "typescript": "^4.3.5"
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "parcel": "^2.0.0",
+    "typescript": "^4.4.4"
   }
 }
