--- a/package.json
+++ b/package.json
@@ -37,17 +37,12 @@
     "test": "tsdx test --passWithNoTests",
     "test:ci": "tsdx test --ci --coverage --verbose --maxWorkers=2",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "prepare": "tsdx build && husky install",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
   "peerDependencies": {
     "react": ">=16"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint --fix"
-    }
   },
   "size-limit": [
     {
@@ -66,7 +61,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
-    "husky": "^7.0.4",
+    "husky": "^7.0.0",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "size-limit": "^6.0.4",
