--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "test": "tsdx test --passWithNoTests",
     "test:ci": "tsdx test --ci --coverage --verbose --maxWorkers=2",
     "lint": "tsdx lint",
+    "format:write": "prettier --write src/**/*.{js,ts,jsx,tsx,css,md}",
+    "format:check": "prettier --check src/**/*.{js,ts,jsx,tsx}",
     "prepare": "tsdx build && husky install",
     "size": "size-limit",
     "analyze": "size-limit --why"
@@ -61,6 +63,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
@@ -70,5 +73,9 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "tsdx lint --fix",
+    "*.{js,css,md,ts,tsx,jsx}": "prettier --write"
   }
 }
