--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "test": "tsdx test --passWithNoTests",
     "test:ci": "tsdx test --ci --coverage --verbose --maxWorkers=2",
     "lint": "tsdx lint",
-    "format:write": "prettier --write src/**/*.{js,ts,jsx,tsx,css,md}",
-    "format:check": "prettier --check src/**/*.{js,ts,jsx,tsx}",
+    "format:write": "prettier --write \"src/**/*.{js,ts,jsx,tsx,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts,jsx,tsx,css,md}\"",
     "prepare": "tsdx build && husky install",
     "size": "size-limit",
     "analyze": "size-limit --why"
@@ -65,6 +65,7 @@
     "@types/react-dom": "^17.0.11",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.0",
+    "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
