--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
     "test:ci": "tsdx test --ci --coverage --verbose --maxWorkers=2",
-    "lint": "tsdx lint",
+    "lint": "eslint \"src/**/*.{js,ts,jsx,tsx}\"",
     "format:write": "prettier --write \"src/**/*.{js,ts,jsx,tsx,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,ts,jsx,tsx,css,md}\"",
     "prepare": "tsdx build && husky install",
@@ -60,10 +60,14 @@
     "@size-limit/preset-small-lib": "^6.0.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.1-alpha-ee069065d-20211105",
     "husky": "^7.0.0",
     "lint-staged": "^11.2.6",
     "prettier": "^2.4.1",
@@ -76,7 +80,7 @@
     "typescript": "^4.3.5"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "tsdx lint --fix",
+    "*.{js,jsx,ts,tsx}": "eslint --fix",
     "*.{js,css,md,ts,tsx,jsx}": "prettier --write"
   }
 }
